web-pod-simple.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: main
    image: nginx
    ports:
    - containerPort: 80
      protocol: TCP
